Algumas alterações no CSS

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <div class="control-container">
-      <input type="text" id="input-el" placeholder="Past the URL here" />
+      <input
+        type="text"
+        id="input-el"
+        placeholder="Past the URL here"
+        required
+      />
       <div class="btn-container">
         <button id="input-btn">SAVE INPUT</button>
         <hr id="between-el" />
